# 1brc

./: .gitignore  Cargo.toml  Makefile  README.md  results.txt
src/: main.rs
