[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1brc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.profiling]
inherits = "release"
debug = true
incremental = true
lto = "fat"

[dependencies]
rustc-hash = "1.1.0"
